les liens des video

--- a/Projects/Redline/home.html
+++ b/Projects/Redline/home.html
@@ -41,18 +41,166 @@
                         <span>LAS ONLINE MOVIES</span><br/><br/>
                         <h3>Tout les films et serie d'actualite</h3>
                         <p></p>
-                        <a href="#">Regarder</a>
+                        <a href="#films">Regarder</a>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-        </div>
+        </div>  </div>
 </section>
-      </div>
+<section>
+<div id="fimls" class="row " style="margin-top: 20px;">
+    <h1>NEWS FILMS</h1>
+    <div class="col-2">  
+        </div>
+        <div class="col-2">
+        <div class="card" style="width: 11rem;">
+            <iframe src="https://www.youtube.com/embed/yUZEF8jZsHo?si=mIw1_yJFDbXO1A4k"
+             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+             encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+    </div>
+    <div class="col-2">
+        <div class="card" style="width: 11rem;">
+            <iframe src="https://www.youtube.com/embed/tLP6-M_EQN0?list=RDSNNTVD_dTxU" 
+            title="My God is still the same - Sanctus Real lyrics video" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+            picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card-body">
+              <p class="card-text">My God is still the same - Sanctus Real lyrics video </div>
+          </div>
+    </div>
+    <div class="col-2">
+        <div class="card" style="width: 11rem;">
+            <iframe src="https://www.youtube.com/embed/bhZKHBIPYPA?si=xyWFZRoWMpcIblSk" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture; web-share"
+             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+    </div>
 
-    
-    </section>
+    <div class="col-2">
+        <div class="card" style="width: 11rem;">
+            <iframe src="https://www.youtube.com/embed/bhZKHBIPYPA?si=xyWFZRoWMpcIblSk" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture; web-share"
+             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+    </div>
+</div>
+<div id="fimls" class="row " style="margin-top: 20px;">
+    <h1>LES PLUS REGARDE</h1>
+    <div class="col-2">  
+        </div>
+        <div class="col-2">
+        <div class="card" style="width: 11rem;">
+            <iframe src="https://www.youtube.com/embed/yUZEF8jZsHo?si=mIw1_yJFDbXO1A4k"
+             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+             encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+    </div>
+    <div class="col-2">
+        <div class="card" style="width: 11rem;">
+            <iframe src="https://www.youtube.com/embed/tLP6-M_EQN0?list=RDSNNTVD_dTxU" 
+            title="My God is still the same - Sanctus Real lyrics video" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+            picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card-body">
+              <p class="card-text">My God is still the same - Sanctus Real lyrics video </div>
+          </div>
+    </div>
+    <div class="col-2">
+        <div class="card" style="width: 11rem;">
+            <iframe src="https://www.youtube.com/embed/bhZKHBIPYPA?si=xyWFZRoWMpcIblSk" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture; web-share"
+             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+    </div>
+
+    <div class="col-2">
+        <div class="card" style="width: 11rem;">
+            <iframe src="https://www.youtube.com/embed/bhZKHBIPYPA?si=xyWFZRoWMpcIblSk" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture; web-share"
+             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+    </div>
+</div>
+<div class="row">
+<div class="col-2">  
+</div>
+<div class="col-2">
+<div class="card" style="width: 11rem;">
+    <iframe src="https://www.youtube.com/embed/yUZEF8jZsHo?si=mIw1_yJFDbXO1A4k"
+     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+     encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+</div>
+<div class="col-2">
+<div class="card" style="width: 11rem;">
+    <iframe src="https://www.youtube.com/embed/tLP6-M_EQN0?list=RDSNNTVD_dTxU" 
+    title="My God is still the same - Sanctus Real lyrics video" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+    picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="card-body">
+      <p class="card-text">My God is still the same - Sanctus Real lyrics video </div>
+  </div>
+</div>
+<div class="col-2">
+<div class="card" style="width: 11rem;">
+    <iframe src="https://www.youtube.com/embed/bhZKHBIPYPA?si=xyWFZRoWMpcIblSk" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+    encrypted-media; gyroscope; picture-in-picture; web-share"
+     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+</div>
+
+<div class="col-2">
+<div class="card" style="width: 11rem;">
+    <iframe src="https://www.youtube.com/embed/bhZKHBIPYPA?si=xyWFZRoWMpcIblSk" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+    encrypted-media; gyroscope; picture-in-picture; web-share"
+     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+</section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous"></script>
