--- a/Projects/Redline/home.html
+++ b/Projects/Redline/home.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <section id="debut">
-      <div class="container-fluid" style="height:100vh";>
-        <nav class="navbar navbar-expand-lg" style="margin-top: 25px;">
+      <div class="container-fluid" style="height:89vh";>
+        <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
              data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
