--- a/Projects/Redline/creer.html
+++ b/Projects/Redline/creer.html
@@ -82,5 +82,13 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous"></script>
 </div>
+
+<style>
+    body {
+        background-image: url(img/ama/bg.jpg);
+        background-repeat: repeat;
+        
+    }
+</style>
 </body>
 </html>
