--- a/Projects/Redline/login.html
+++ b/Projects/Redline/login.html
@@ -9,7 +9,13 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-
+<style>
+    body {
+        background-image: url(img/ama/bg.jpg);
+        background-repeat: repeat;
+        
+    }
+</style>
 </head>
 <body>
 <header id="header">
@@ -73,7 +79,6 @@
                 </div>
             </div>
         </div>
-
 
     </section>
 <script>
