une seul page avec la verifiaction d'age

--- a/Projects/Redline/accueille.html
+++ b/Projects/Redline/accueille.html
@@ -41,9 +41,7 @@
                     <div class="form-group">
                             <input placeholder="Annee de naissance" id="age" style="border-radius: 10px;">
                         </div>
-                           
                         <div class="row">
-                        
                             <div class="col ">
                            <button class="btn btn-success" onclick="recuperation()">connexion</button>
                             </div>
@@ -53,6 +51,8 @@
             </div>
         </div>
         <script>
+  window.open('accueille.html', '_blank'); 
+
     function recuperation(){
         let saisie = document.getElementById("age").value
         console.log(typeof(saisie),'frfrfrf',saisie,length.saisie)
